[project]
name = "healthbench"
description = "OpenAI HealthBench evaluation by RK Arora et al., 2025"
tags = ["medical", "communication", "single-turn", "llm-judge"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "datasets>=4.1.1",
    "openai>=2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]

authors = [
    { name = "Sameed Khan", email = "sameedgkhan@gmail.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
